[package]
name = "protoactor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of the Proto.Actor framework"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
log = "0.4"
futures = "0.3"
thiserror = "1.0"
dashmap = "5.4"
parking_lot = "0.12"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3" 