[package]
name = "protoactor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of the Proto.Actor framework"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
log = "0.4"
futures = "0.3"
thiserror = "1.0"
dashmap = "5.4"
parking_lot = "0.12"
tracing = "0.1"
num_cpus = "1.13"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bincode = "1.3"
metrics = "0.21"
priority-queue = "1.3"
anyhow = "1.0"
rand = "0.8.5"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3" 
